--- a/ui/demo/index.html
+++ b/ui/demo/index.html
@@ -19,7 +19,7 @@
       import { connectDeps } from '@holochain-open-dev/common';
 
       (async function () {
-        let store = undefined;
+        let store = undefined;/* 
         const appWebsocket = await ConductorApi.AppWebsocket.connect(
           'ws://localhost:8888'
         );
@@ -28,10 +28,10 @@
         });
 
         const cellId = appInfo.cell_data[0].cell_id;
-
+ */
         customElements.define(
           'hod-calendar-event',
-          connectDeps(HodCalendarEvent, { appWebsocket, cellId })
+          connectDeps(HodCalendarEvent, {  })
         );
       })();
     </script>
